5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1712_2504.log
== SUBMITION (2019-05-09 09:26:30) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql + ((ql * pl) / 100)
cqv = qv + ((qv * pb) / 100)
t = 1

while(cql < cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)
	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.237539
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2504/main.py", line 7, in <module>
    cqv = qv + ((qv * pb) / 100)
NameError: name 'pb' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:27:34) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql + ((ql * pl) / 100)
cqv = qv + ((qv * pb) / 100)
t = 1

while(cql < cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)
	t = t + 1
	
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    cqv = qv + ((qv * pb) / 100)
NameError: name 'pb' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 09:28:17) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql + ((ql * pl) / 100)
cqv = qv + ((qv * pv) / 100)
t = 1

while(cql < cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)
	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.223765
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
8
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:28:21) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql + ((ql * pl) / 100)
cqv = qv + ((qv * pv) / 100)
t = 1

while(cql < cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)
	t = t + 1
	
print(t)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 09:31:51) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql
cqv = qv
t = 0

while(cql < cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)
	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.115812
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
8
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:32:03) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql
cqv = qv
t = 0

while(cql < cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)
	t = t + 1
	
print(t)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 09:33:13) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

cql = ql
cqv = qv
t = 0

while(cql < 2 * cqv):
	cql = cql + ((cql * pl) / 100)
	cqv = cqv + ((cqv * pv) / 100)
	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.190042
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:38:27) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

t = 0

while(ql < 2 * qv):
	ql = ql + ((ql * pl) / 100)
	qv = qv + ((qv * pv) / 100)
	t = t + 16
	
print(t)
-- EXECUTION TIME:
0.108224
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
144
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
80
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
272
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 19:38:30) 
-- CODE:
qv = int(input())
ql = int(input())
pv = float(input())
pl = float(input())

t = 0

while(ql < 2 * qv):
	ql = ql + ((ql * pl) / 100)
	qv = qv + ((qv * pv) / 100)
	t = t + 1
	
print(t)
-- EXECUTION TIME:
0.196355
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
